--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ body {
                     <hr>
                     <p>
                         <center><a href="Resume New.pdf" class="btn btn-success btn-block" role="button">Download PDF Resume</a></center>
+                        <br>
                     </p>
                     <hr>
                     <h4>Sachin Rajbhandari</h4>
@@ -66,12 +67,6 @@ body {
                         <i class="fa fa-circle-thin fa-stack-2x"></i>
                         <i class="fa fa-soccer-ball-o fa-spin fa-stack-1x" style="color: #5ABA5A"></i>
                     </span>
-                    <b>Current Status</b>
-                    <p></p>
-                    <p> Attending University.</p>
-                    <p> Completed Nucamp Bootcamp - MERN Stack.</p>
-                    <p> Actively looking for Web Developer positions.</p>
-                    <hr>
                     <!-- My Skills -->
                     <span class="fa-stack">
                         <i class="fa fa-circle-thin fa-stack-2x"></i>
@@ -95,7 +90,17 @@ body {
                         <p>Docker | AWS | WordPress</p>
                         <p>Lightroom | Photoshop</p>
                         <p>Linux | CCNA</p>
-                        <hr><br><br><br>
+                        <hr>
+                        <!-- Education -->
+                        <h4><i class="fa fa-graduation-cap" style="color:  #5ABA5A"></i> Education</h4>
+                        <h5><b>Nucamp Bootcamp</b></h5>
+                        <h6><i class="fa fa-calendar"></i> Jan 2021 - June 2021 </h6>
+                        <p>Full-Stack Web & Mobile Development Certificate</p>
+                        <h5><b>University of the People, Pasadena, CA</b></h5>
+                        <h6><i class="fa fa-calendar"></i> May 2020 - Current</h6>
+                        <p>Associate in Computer Science</p>
+                        <br>
+                        <hr>
                 </div>
                 <!-- End Left Column -->
             </div>
@@ -103,7 +108,7 @@ body {
             <div class="col-sm-8">
                 <div class="well">
                     <h4><i class="fa fa-cubes" style="color:  #5ABA5A"></i> Project Portfolio</h4>
-                     <h5><i class="fa fa-cogs" style="color:  #5ABA5A"></i> Projects with Source Codes</h5>
+                    <h5><i class="fa fa-cogs" style="color:  #5ABA5A"></i> Projects with Source Codes</h5>
                     <i class="fa fa-check-circle-o"></i><a href="https://elated-fermi-ef5362.netlify.app/" target="_blank" style="color:black"> Bootstrap - Nucampsite ver 1.0 </a><i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb/nucamp_bootstrap" target="_blank" style="color:black"> Source code </a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://sleepy-liskov-822294.netlify.app/" target="_blank" style="color:black"> Bootstrap - Nucampsite ver 2.0 </a><i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb/nucamp_bootstrap_new" target="_blank" style="color:black"> Source code </a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://sad-spence-5d1733.netlify.app/" target="_blank" style="color:black"> Bootstrap - Luxiom Photography </a><i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb/personal_bootstrap_project" target="_blank" style="color:black"> Source code </a><br>
@@ -112,7 +117,7 @@ body {
                     <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/Learning_Grids/index.html" target="_blank" style="color:black"> HTML/CSS Landing Page II </a><i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb/sachinkrb.github.io/blob/master/Learning_Grids" target="_blank" style="color:black"> Source code </a><br>
                     <i class="fa fa-check-circle-o"></i><a href="index2.html" target="_blank" style="color:black">HTML/CSS Resume </a><i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb/sachinkrb.github.io/blob/master/index2.html" target="_blank" style="color:black"> Source code </a><br>
                     <!-- <i class="fa fa-check-circle-o"></i><a href="skeleton-test/index.html" target="_blank" style="color:black"> Online Links </a><br> -->
-                     <h5><i class="fa fa-cogs" style="color:  #5ABA5A"></i> Others </h5>
+                    <h5><i class="fa fa-cogs" style="color:  #5ABA5A"></i> Others </h5>
                     <i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black"> Github Repos</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="certificates.html" target="_blank" style="color:black"> Nucamp Bootcamp Certificates</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://drive.google.com/drive/folders/145rxeadKgKbnWjQOyLDHrpQHm7zvYdgV?usp=sharing" target="_blank" style="color:black"> WordPress Defunct Linuxchats.com Backup </a><br>
@@ -122,32 +127,37 @@ body {
                     <h4><i class="fa fa-suitcase" style="color:  #5ABA5A"></i> Work Experience</h4>
                     <h5><b>LiveOps - Independent Contractor - Work From Home</b></h5>
                     <h6><i class="fa fa-calendar "></i><span> July 2019 - Current</span></h6>
-                    <p>Working as a customer service contractor for Bath & Body Works with sales/account/post-sales issues. Worked as Product Expert support contractor for Intuit TurboTax.</p>
+                    <p>Guided customers for Bath & Body Works with sales/account/post-sales issues. Advised TurboTax customers as Product Expert support contractor with filing taxes and software issues.</p>
                     <hr>
                     <h5><b>Teleperformance USA - Senior Apple Advisor - Work From Home</b></h5>
                     <h6><i class="fa fa-calendar "></i><span> Jul 2017 - June 2019</span></h6>
-                    <p>Troubleshoot software and hardware issues on all Apple products. Meticulously followed Apple Internal Use Only articles. Reported all new bugs and customer's complaints.</p>
+                    <p>Addressed software and hardware issues on all Apple products. Followed up with customers to close the troubleshooting tickets. Documented & reported software bugs and customer's complaints.</p>
                     <hr>
-                    <h5><b>United Health Group - Web Developer - Short-Term IT Contract Job</b></h5>
+                    <h5><b>United Health Group - Web Developer - Short-Term IT Contractor</b></h5>
                     <h6><i class="fa fa-calendar "></i> <span> Feb 2017 - May 2017</span></h6>
-                    <p>Collaborated on redesigning an old website. Recoded assigned tasks for pages. Successfully closed QA bug tickets. Project ended prematurely for the reevaluation of the budget.</p>
+                    <p>Collaborated in coding old website with new features. Completed assigned tasks and explored team tasks. Communicated with QA to close the bug tickets. Attended scrum meeting with the team to report and discuss updates.
+                    </p>
                     <hr>
                     <h5><b>Support.com - Remote Services Technician - Work From Home</b></h5>
                     <h6><i class="fa fa-calendar "></i> Dec 2015 - Jan 2017</h6>
-                    <p>Worked on setting up and troubleshooting Comcast gateways. Studied signal level to find RF issues and schedule repair technician if needed.</p>
+                    <p>Mediated on setting up and troubleshooting Comcast gateways. Probed signal levels to find RF issues and scheduled hardware repair technician if needed.
+                    </p>
+                    <hr>
+                    <h5><b>Multiple small businesses - Self-employed - Malls</b></h5>
+                    <h6><i class="fa fa-calendar "></i> Jun 2009 - Nov 2015</h6>
+                    <p>Led and operated multiple small businesses in the malls. Hired, trained, and managed employees.
+                    </p>
                     <hr>
                     <h5><b>Academic Computer Center - MNSU IT Support</b></h5>
                     <h6><i class="fa fa-calendar "></i> Nov 2007 - May 2009</h6>
-                    <p>Assisted in deployment, configuration, troubleshooting and updates of PCs, Macs, printers & scanners . Assisted students in working with various Microsoft products. </p>
+                    <p>Assisted in deployment, configuration, troubleshooting, and updating PCs, Macs, printers & scanners. Guided students in working with Microsoft Office products.
+                    </p>
                     <hr>
-                    <!-- Education -->
-                    <h4><i class="fa fa-graduation-cap" style="color:  #5ABA5A"></i> Education</h4>
-                    <h5><b>Nucamp Bootcamp</b></h5>
-                    <h6><i class="fa fa-calendar"></i> 2021 </h6>
-                    <p>Full-Stack Web & Mobile Development Certificate</p>
-                    <h5><b>University of the People, Pasadena, CA</b></h5>
-                    <h6><i class="fa fa-calendar"></i> 2020 - Current</h6>
-                    <p>Associate in Computer Science</p>
+                    <b>Current Status</b>
+                    <p></p>
+                    <p> Attending University.</p>
+                    <p> Completed Nucamp Bootcamp - MERN Stack.</p>
+                    <p> Actively looking for Web Developer positions.</p>
                 </div>
             </div>
         </div>
