--- a/index2.html
+++ b/index2.html
@@ -244,7 +244,7 @@
         <div class="resume-frame-1">
             <header>
                 <h2>Sachin Rajbhandari</h2>
-                <h2> <a href="mailto:sachink.rb@gmail.com">sachink.rb@gmail.com</a></h2>
+                <h2> <a href="mailto:sachink.rb@gmail.com">devsachinr@gmail.com</a></h2>
                 <h2>Website: <a href="https://sachinkrb.github.io">sachinkrb.github.io</a></h2>
                 <h2>Austin, TX</h2>
             </header>
@@ -275,18 +275,18 @@
                             <h2>Mini Projects</h2>
                         </hgroup>
                         <ul>
-                            <li><a href="certificates.html" target="_blank" style="color:black"> Coding Bootcamp Certificates</a></li>
-                            <li><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black"> Github</a></li>
+                            
                             <li><a href="https://elated-fermi-ef5362.netlify.app/" target="_blank" style="color:black"> Bootstrap - Nucampsite ver 1.0 </a><i class="fa fa-save"></i><a href="https://github.com/sachinkrb/nucamp_bootstrap" target="_blank" style="color:black"> Source code </a></li>
                             <li><a href="https://sleepy-liskov-822294.netlify.app/" target="_blank" style="color:black"> Bootstrap - Nucampsite ver 2.0 </a><i class="fa fa-save"></i><a href="https://github.com/sachinkrb/nucamp_bootstrap_new" target="_blank" style="color:black"> Source code </a></li>
                             <li><a href="https://sad-spence-5d1733.netlify.app/" target="_blank" style="color:black"> Bootstrap - Luxiom Photography </a><i class="fa fa-save"></i><a href="https://github.com/sachinkrb/personal_bootstrap_project" target="_blank" style="color:black"> Source code </a></li>
                             <li><a href="https://infallible-sammet-9a5b01.netlify.app/" target="_blank" style="color:black"> React.js/Redux/JSON - Nucampsite </a><i class="fa fa-save"></i><a href="https://github.com/sachinkrb/nucampsite_react_redux" target="_blank" style="color:black"> Source code </a></li>
-                            
                             <li><a href="https://sachinkrb.github.io/index3.html" target="_blank" style="color:black"> HTML/CSS Website I </a><i class="fa fa-save"></i><a href="https://github.com/sachinkrb/sachinkrb.github.io/blob/master/index3.html" target="_blank" style="color:black"> Source code </a></li>
                             <li><a href="https://sachinkrb.github.io/Learning_Grids/index.html" target="_blank" style="color:black"> HTML/CSS Website II </a><i class="fa fa-save"></i><a href="https://github.com/sachinkrb/sachinkrb.github.io/blob/master/Learning_Grids" target="_blank" style="color:black"> Source code </a></li>
                             <li><a href="#" target="_blank" style="color:black">HTML/CSS Resume </a><i class="fa fa-save"></i><a href="https://github.com/sachinkrb/sachinkrb.github.io/blob/master/index2.html" target="_blank" style="color:black"> Source code </a></li>
                             <li><a href="https://drive.google.com/drive/folders/145rxeadKgKbnWjQOyLDHrpQHm7zvYdgV?usp=sharing" target="_blank" style="color:black"> WordPress Defunct Linuxchats Site Backup </a></li>
                             <li><a href="https://snrphotos.myportfolio.com" target="_blank" style="color:black"> Photography Portfolio</a></li>
+                            <li><a href="certificates.html" target="_blank" style="color:black"> Coding Bootcamp Certificates</a></li>
+                            <li><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black"> Github</a></li>
                         </ul>
                     </article>
                 </section>
@@ -298,9 +298,8 @@
                             <p>August 2019 – Current</p>
                         </hgroup>
                         <ul>
-                            <li>Working as customer service contractor for Bath & Body Works and Intuit TurboTax.</li>
-                            <li>Resolving sales/accounts/post-sales issues & product expert support.</li>
-                            <li>Worked as Product Expert Support contractor for Intuit TurboTax.</li>
+                            <li>Guided customers for Bath & Body Works with sales/account/post-sales issues.</li>
+                            <li>Advised TurboTax customers as Product Expert support contractor with filing taxes and software issues.</li>
                         </ul>
                     </article>
                     <article>
@@ -309,11 +308,9 @@
                             <p>July 2017 – June 2019</p>
                         </hgroup>
                         <ul>
-                            <li>Professionally handled software/hardware calls for all Apple products.</li>
-                            <li>Followed internal Apple documents to resolve software issues.</li>
-                            <li>Documented each software and hardware issues.</li>
-                            <li>Setup hardware related repair appointments.</li>
-                            <li>Reported software updates bugs with steps to reproduce.</li>
+                            <li>Addressed software and hardware issues on all Apple products. </li>
+                            <li>Followed up with customers to close the troubleshooting tickets.</li>
+                            <li>Documented & reported software bugs and customer's complaints.</li>
                         </ul>
                     </article>
                     <article>
@@ -322,11 +319,10 @@
                             <p>February 2017 – May 2017</p>
                         </hgroup>
                         <ul>
-                            <li>Followed Agile methodology for tasks iterations, tasks reporting and final product demos.</li>
-                            <li>Worked on redesigning old website while waiting on a new project.</li>
-                            <li>Worked with HTML5, CSS3,SQL, JavaScript, jQuery, JSP, Java, Spring, Maven, DB2, Subversion.</li>
-                            <li>Took care of defects opened by QA within the given time frame. </li>
-                            <li>The project ended prematurely for the reallocation of the budget.</li>
+                            <li>Collaborated in coding old website with new features.</li>
+                            <li>Accomplished assigned tasks and explored team tasks.</li>
+                            <li>Communicated with QA to close the bug tickets.</li>
+                            <li>Attended scrum meeting with the team to report and discuss updates.</li>
                         </ul>
                     </article>
                     <article>
@@ -336,9 +332,19 @@
                         </hgroup>
                         <ul>
                             <li>Professionally handled Tier 2 calls associated with Comcast customer's Internet issues.</li>
-                            <li>Studied Signal levels to look for RF issues and scheduled a technician if needed.</li>
-                            <li>Logged into Gateways remotely to troubleshoot, manipulate settings, read logs to check modem health.</li>
+                            <li>Mediated on setting up and troubleshooting Comcast gateways. </li>
+                            <li>Probed signal levels to find RF issues as a Tier 2 support and scheduled hardware repair technician if needed.</li>
                             <li>Ran proximity checks to determine outages.</li>
+                        </ul>
+                    </article>
+                    <article>
+                        <hgroup>
+                            <h1>Multiple Small Businesses @ Self-Employed @ Malls </h1>
+                            <p>June 2009 - November 2015 </p>
+                        </hgroup>
+                        <ul>
+                            <li>Led and operated multiple small businesses in the malls. </li>
+                            <li>Hired, trained, and managed employees.</li>
                         </ul>
                     </article>
                     <article>
@@ -347,10 +353,8 @@
                             <p>November 2007 - May 2009</p>
                         </hgroup>
                         <ul>
-                            <li>Supported IT leads in deploying and configuring Window OS in several buildings on campus.</li>
-                            <li>Used PXE boot, Wake on LAN(WOL), and protocols like BOOTP/DHCP/TFTP.</li>
-                            <li>Assisted in upgrading old hardware.</li>
-                            <li>Assisted students in troubleshooting installed sofware.</li>
+                            <li>Assisted in deployment, configuration, troubleshooting, and updating PCs, Macs, printers & scanners. </li>
+                            <li>Guided students in working with Microsoft Office products.</li>
                         </ul>
                     </article>
                 </section>
@@ -359,14 +363,14 @@
                     <article>
                         <hgroup>
                             <h1>Nucamp Bootcamp Co. </h1>
-                            <p>2021 - 2021</p>
+                            <p>Jan 2021 - June 2021</p>
                         </hgroup>
                         <ul>
                             <li>Full Stack Web & Mobile Development Certificate</li>
                         </ul>
                         <hgroup>
                             <h1>University of the People (UoPeople) - Pasadena, CA </h1>
-                            <p>2020 - Current</p>
+                            <p>May 2020 - Current</p>
                         </hgroup>
                         <ul>
                             <li>Associate Degree in Computer Science</li>
