--- a/index2.html
+++ b/index2.html
@@ -275,7 +275,6 @@
                             <h2>Mini Projects</h2>
                         </hgroup>
                         <ul>
-                            
                             <li><a href="https://elated-fermi-ef5362.netlify.app/" target="_blank" style="color:black"> Bootstrap - Nucampsite ver 1.0 </a><i class="fa fa-save"></i><a href="https://github.com/sachinkrb/nucamp_bootstrap" target="_blank" style="color:black"> Source code </a></li>
                             <li><a href="https://sleepy-liskov-822294.netlify.app/" target="_blank" style="color:black"> Bootstrap - Nucampsite ver 2.0 </a><i class="fa fa-save"></i><a href="https://github.com/sachinkrb/nucamp_bootstrap_new" target="_blank" style="color:black"> Source code </a></li>
                             <li><a href="https://sad-spence-5d1733.netlify.app/" target="_blank" style="color:black"> Bootstrap - Luxiom Photography </a><i class="fa fa-save"></i><a href="https://github.com/sachinkrb/personal_bootstrap_project" target="_blank" style="color:black"> Source code </a></li>
@@ -294,15 +293,13 @@
                     <h1>Work Background</h1>
                     <article>
                         <hgroup>
-                            <h1>Independent Contractor @ LiveOps @ Work At Home</h1>
+                            <h1>Customer Service Contractor @ LiveOps @ Work At Home</h1>
                             <p>August 2019 – Current</p>
                         </hgroup>
                         <ul>
                             <li>Guided customers for Bath & Body Works with sales/account/post-sales issues.</li>
                             <li>Advised TurboTax customers as Product Expert support contractor with filing taxes and software issues.</li>
                         </ul>
-                    </article>
-                    <article>
                         <hgroup>
                             <h1>Senior Apple Advisor @ Teleperformance @ Work At Home</h1>
                             <p>July 2017 – June 2019</p>
@@ -312,8 +309,6 @@
                             <li>Followed up with customers to close the troubleshooting tickets.</li>
                             <li>Documented & reported software bugs and customer's complaints.</li>
                         </ul>
-                    </article>
-                    <article>
                         <hgroup>
                             <h1>Web Developer @ United Health Group @ Short-Term Contractor</h1>
                             <p>February 2017 – May 2017</p>
@@ -324,8 +319,6 @@
                             <li>Communicated with QA to close the bug tickets.</li>
                             <li>Attended scrum meeting with the team to report and discuss updates.</li>
                         </ul>
-                    </article>
-                    <article>
                         <hgroup>
                             <h1>Remote Services Technician @ Support.com @ Work At Home </h1>
                             <p>December 2015 - January 2017 </p>
@@ -336,8 +329,6 @@
                             <li>Probed signal levels to find RF issues as a Tier 2 support and scheduled hardware repair technician if needed.</li>
                             <li>Ran proximity checks to determine outages.</li>
                         </ul>
-                    </article>
-                    <article>
                         <hgroup>
                             <h1>Multiple Small Businesses @ Self-Employed @ Malls </h1>
                             <p>June 2009 - November 2015 </p>
@@ -346,8 +337,6 @@
                             <li>Led and operated multiple small businesses in the malls. </li>
                             <li>Hired, trained, and managed employees.</li>
                         </ul>
-                    </article>
-                    <article>
                         <hgroup>
                             <h1>IT Support Assistant @ Academic Computer Center @ MNSU </h1>
                             <p>November 2007 - May 2009</p>
