--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ body {
                     <!-- My Skills -->
                     <span class="fa-stack">
                         <i class="fa fa-circle-thin fa-stack-2x"></i>
-                        <i class="fa fa-cog fa-spin fa-stack-1x" style="color: #5ABA5A"></i>
+                        <!-- <i class="fa fa-cog fa-spin fa-stack-1x" style="color: #5ABA5A"></i> -->
                     </span>
                     <b>Main Skills</b>
                     <p></p>
